--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>Première page html</title>
 </head>
 <body>
-    
+    <h1>Recette de pancakes</h1>
+    <p>(Merci <a href="http://swissmilk.ch">Swissmilk</a> pour la recette)</p>
+    <img width="200" height="800" src="https://www.bettybossi.ch/static/rezepte/x/bb_bbkn200901_0001a_x.jpg" alt="des pancakes avec du beurre">
+    <i>Question existentielle : par quel...</i>
+    <h2>Ingrédients</h2>
+    <ul>
+        <li>250g de farine</li>
+        <li>1 pincée de sel </li>
+    </ul>
+    <textarea name="" id=""></textarea>
 </body>
 </html>
