--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <ul>
         <li>250g de farine</li>
         <li>1 pincée de sel </li>
+        <li>1 sachet de sucre</li>
     </ul>
     <textarea name="" id=""></textarea>
 </body>
