--- a/index.html
+++ b/index.html
@@ -4,15 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Première page html</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Recette de pancakes</h1>
+    <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Est possimus praesentium, ipsum dolorem repudiandae facilis commodi ducimus aut officiis nihil, assumenda pariatur tempore reiciendis alias, eius placeat ea. Quia, assumenda!</p>
+    <p class="vert">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem molestiae quidem nemo debitis velit unde numquam laudantium, quia molestias error, quaerat dignissimos praesentium maiores necessitatibus nihil consequatur obcaecati optio omnis!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti sequi illum quod eveniet architecto dolorum, molestias aut doloremque cumque perferendis dolorem inventore neque error similique? Ut nemo fugiat consequuntur hic?</p> 
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore et illum recusandae vitae est optio laudantium reiciendis, aspernatur veniam praesentium dolorum sunt ut fugit labore quam pariatur sapiente tempore fuga!</p>
     <p>(Merci <a href="http://swissmilk.ch">Swissmilk</a> pour la recette)</p>
     <img width="200" height="800" src="https://www.bettybossi.ch/static/rezepte/x/bb_bbkn200901_0001a_x.jpg" alt="des pancakes avec du beurre">
     <i>Question existentielle : par quel...</i>
     <h2>Ingrédients</h2>
     <ul>
-        <li>250g de farine</li>
+        <li class="vert">250g de farine</li>
         <li>1 pincée de sel </li>
         <li>1 sachet de sucre</li>
     </ul>
